--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,21 +1,17 @@
 <section>
-  <table
-    class="table table-striped table-bordered"
-    *ngIf="combinedData.length > 0"
-  >
+  <table class="table table-striped table-bordered">
     <thead>
       <tr>
         <th scope="col">Customer Name</th>
         <th scope="col">Transaction Details</th>
       </tr>
     </thead>
+    @if (combinedData.length > 0) {
     <tbody>
-      <tr
-        *ngFor="
-          let customer of combinedData
-            | search : { id: searchValue, amount: searchValue }
-        "
-      >
+      @for (customer of combinedData | search : { id: searchValue, amount:
+      searchValue }; track $index ; let count = $count) { @if
+      (itemLengthCustomers) {
+      <tr>
         <td>{{ customer.name }}</td>
         <td>
           <button
@@ -35,21 +31,47 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let transaction of customer.transactions">
+              @for (transaction of customer.transactions; track $index) {
+              <tr>
                 <td>{{ transaction.amount }}</td>
                 <td>{{ transaction.date | date }}</td>
               </tr>
+              }
             </tbody>
           </table>
         </td>
       </tr>
+      } }
     </tbody>
+    @if (!itemLengthCustomers) {
+    <tfoot>
+      <tr>
+        <td
+          colspan="3"
+          class="text-center text-capitalize text-white bg-dark p-3 my-1"
+        >
+          No transactions And Data found
+        </td>
+      </tr>
+    </tfoot>
+    } } @else {
+    <tfoot>
+      <tr>
+        <td
+          colspan="3"
+          class="text-center text-capitalize text-white bg-dark p-3 my-1"
+        >
+          No transactions And Data found
+        </td>
+      </tr>
+    </tfoot>
+    }
   </table>
-  <div *ngIf="combinedData.length === 0">No data available.</div>
+  @if(itemLengthCustomers){
+  <div class="w-50 mx-auto">
+    <app-transaction-chart
+      [transactions]="selectedCustomerTransactions"
+    ></app-transaction-chart>
+  </div>
+  }
 </section>
-
-<div class="w-50 mx-auto">
-  <app-transaction-chart
-    [transactions]="selectedCustomerTransactions"
-  ></app-transaction-chart>
-</div>
